# soft-fpga

./: .gitignore  .gitmodules  .markdownlint.json  .mcp.json  CLAUDE.md  LICENSE  README.ja.md  README.md  doAppleI-basic.sh  doAppleI-monitor.sh  doBuildAll.sh  doBuildWasm.sh  doServe.sh  doTestAll-web.sh  doTestAll.sh  index.html
.github/workflows/: ci.yml  pages.yml
.playwright-mcp/: page-2026-05-09T03-25-34-042Z.yml  page-2026-05-09T03-26-43-724Z.yml  page-2026-05-09T04-16-58-995Z.yml  page-2026-05-09T04-17-14-999Z.yml  page-2026-05-09T04-24-37-448Z.yml  page-2026-05-09T04-29-56-548Z.yml  page-2026-05-09T04-44-58-090Z.yml  page-2026-05-09T04-45-02-888Z.yml  page-2026-05-09T04-45-07-096Z.yml  page-2026-05-09T04-45-18-170Z.yml  page-2026-05-09T04-45-22-909Z.yml  page-2026-05-09T05-35-09-448Z.yml  page-2026-05-09T05-35-13-727Z.yml  page-2026-05-09T05-35-17-151Z.yml  page-2026-05-09T05-35-19-790Z.yml  page-2026-05-09T05-35-23-116Z.yml  page-2026-05-09T06-44-39-879Z.yml  page-2026-05-09T06-44-50-396Z.yml  page-2026-05-09T06-49-25-665Z.yml  page-2026-05-09T06-49-30-090Z.yml  page-2026-05-09T06-49-46-319Z.yml  page-2026-05-09T08-14-44-324Z.yml  page-2026-05-09T08-15-30-428Z.yml  page-2026-05-09T08-15-37-626Z.yml  page-2026-05-09T08-16-29-457Z.yml  page-2026-05-09T08-39-26-819Z.yml  page-2026-05-09T08-39-31-798Z.yml  page-2026-05-09T08-55-52-838Z.yml  page-2026-05-09T08-55-58-584Z.yml  page-2026-05-09T09-01-15-098Z.yml  page-2026-05-09T09-01-19-932Z.yml  page-2026-05-09T09-01-54-325Z.yml  page-2026-05-09T09-21-34-715Z.yml  page-2026-05-09T09-21-40-651Z.yml
01-counter/: sim.js  sim.wasm
02-traffic-fsm/: index.html  sim.js  sim.wasm
03-uart/: sim.js  sim.wasm
04-6502/: index.html  sim.js  sim.wasm
06-8080/: index.html  sim.js  sim.wasm
cxx/: verilatedos_c.h  wasm_compat.h
doc/: 01-soft-FPGA-WebAssembly-設計議論メモ.md  02-rtlscope-OBSERVEマクロ設計メモ.md  03-software構成メモ.md  04-実装計画-01-counter.md  05-実装計画-02-traffic-fsm.md  06-実装計画-03-uart.md  07-実装計画-04-6502-apple1.md  08-wozmon-使い方.md  09-65c02-テスト計画.md  11-docker-ビルド手順.md
doc/img/: 02-traffic-fsm-state.puml  03-uart-rx-state.puml  03-uart-tx-state.puml
docker/: Dockerfile  Dockerfile.wasm  compose.yml
docs/: 00-目次.md  01-soft-FPGA-WebAssembly-設計議論メモ.md  02-software構成メモ.md  04-docker-ビルド手順.md  05-deploy-gh-pages.md  06-実装計画-03-uart.md  07-実装計画-04-6502-apple1.md  08-wozmon-使い方.md  10-ビルドターゲット設計メモ.md  12-integer-BASIC-起動失敗-調査計画.md  13-integer-BASIC-動作検証サンプル.md  14-テスト結果-ベンチマーク.md  15-ディスクリート論理ゲーム-Pong-Breakout-soft-FPGA-WASM計画.md
docs/03-uart/: 01-実装計画.md
docs/04-6502/: 01-実装計画.md  02-Apple-I-歴史的価値.md  03-開発ツール.md  04-Apple-II-移植検討.md  10-テスト仕様書.md  12-integer-BASIC-動作検証サンプル.md  13-テスト結果-ベンチマーク.md  50-wozmon-使い方.md  51-integer-BASIC-文法リファレンス.md  52-メモリマップ.md  53-機械語入門.md
docs/05-discrete-game/: 01-計画.md
docs/06-8080/: 01-実装計画.md  02-CP_M-歴史的価値.md  (+15 more)
examples/: README.md
examples/01-counter/: CMakeLists.txt
examples/01-counter/cxx/: harness.cpp  main_linux.cpp
examples/01-counter/verilog/: counter.v
examples/01-counter/web/: index.html
examples/02-traffic-fsm/: CMakeLists.txt
examples/02-traffic-fsm/cxx/: harness.cpp
examples/02-traffic-fsm/verilog/: traffic_fsm.v
examples/03-uart/: CMakeLists.txt
examples/03-uart/cxx/: harness.cpp  main_linux.cpp
examples/03-uart/verilog/: uart_rx.v  uart_top.v  uart_tx.v
examples/03-uart/web/: index.html
examples/04-6502/: CMakeLists.txt
examples/04-6502/cxx/: harness.cpp  main_linux.cpp
examples/04-6502/sw/cc65/: Makefile  README.md  apple1.cfg  crt0.s  foo.c  foo.s  runtime.s
examples/04-6502/verilog/: apple1_top.v
examples/04-6502/web/: doStartWebServer.sh  index.html
examples/06-8080/: ARGS.C  BENCH.C  CALC.C  CALIB.C  CMakeLists.txt  CYCL.C  CYCL.H  FREQ.C  HELLO.TXT  INPUT.C  README.md  SORT.C  STRING.C  log.txt
examples/06-8080/cxx/: harness.cpp  main_linux.cpp  version.h
examples/06-8080/sw/cpm/: 8080EX1.COM  8080EX1_new.COM  8080ex1_cpm.asm  Makefile  README.md
examples/06-8080/sw/cpm/bios/: bios.asm  signon.inc
examples/06-8080/sw/cpm/disks/: bdsc.dsk  bdsc.orig.dsk  cpm22.dsk  cpm22.dsk.bak
examples/06-8080/test/: Makefile  test_all.asm
examples/06-8080/verilog/: cpm_top.v
examples/06-8080/web/: doStart.sh  index.html  serve.py  sim-worker.js
firmware/: CMakeLists.txt  README.md
obj_dir_06/: Vcpm_top.cpp  Vcpm_top.h  Vcpm_top__ConstPool_0.cpp  Vcpm_top__ConstPool__0__Slow.cpp  Vcpm_top__Dpi.cpp  Vcpm_top__Dpi.h  Vcpm_top__Syms.cpp  Vcpm_top__Syms.h  Vcpm_top__Syms__Slow.cpp  Vcpm_top___024root.h  Vcpm_top___024root__0.cpp  Vcpm_top___024root__0__Slow.cpp  Vcpm_top___024root__Slow.cpp  Vcpm_top__pch.h  Vcpm_top__ver.d  Vcpm_top_classes.mk  Vcpm_top_cpm_top.h  Vcpm_top_cpm_top__0__Slow.cpp  Vcpm_top_cpm_top__Slow.cpp  Vcpm_top_vm80a_core.h  Vcpm_top_vm80a_core__0.cpp  Vcpm_top_vm80a_core__0__Slow.cpp  Vcpm_top_vm80a_core__Slow.cpp
obj_dir_06_wasm/: Vcpm_top.cpp  Vcpm_top.mk  Vcpm_top__Dpi.cpp  Vcpm_top__Syms.h  Vcpm_top___024root.h  Vcpm_top___024root__0.cpp  Vcpm_top___024root__0__Slow.cpp  Vcpm_top___024root__Slow.cpp  Vcpm_top__pch.h  Vcpm_top__ver.d  Vcpm_top_classes.mk  Vcpm_top_cpm_top.h  Vcpm_top_cpm_top__0.cpp  Vcpm_top_cpm_top__0__Slow.cpp  Vcpm_top_cpm_top__Slow.cpp  Vcpm_top_vm80a_core.h  Vcpm_top_vm80a_core__0.cpp  Vcpm_top_vm80a_core__0__Slow.cpp  Vcpm_top_vm80a_core__Slow.cpp
scripts/: _build-host-inner.sh  _build-pico-inner.sh  _build-sim-inner.sh  _flash-inner.sh  _test-cocotb-inner.sh  _test-hil-inner.sh  _test-unit-inner.sh  build-host.sh  build-pico.sh  build-sim.sh  build-wasm-02.sh  build-wasm-03.sh  build-wasm-04.sh  build-wasm-05.sh  build-wasm-06.sh  build-wasm.sh  deploy-gh-pages.sh  doBuildPico.sh  doRunHost.sh  doVersionUp-06-cpm.sh  doVersionUp.sh  flash.sh  picocom-0.sh  serial.sh  setup-cpm22.sh  size.sh  test-cocotb.sh  test-hil.sh  test-unit.sh  wsl-attach.ps1  wsl-attach.sh
verif/: README.md
verif/dormann/: CMakeLists.txt  run.sh  test_dormann.cpp
verif/wozmon/: CMakeLists.txt  run.sh  test_basic.cpp  test_programs.cpp  test_wozmon.cpp
verilog/: README.md
web/: index.html
(+17 files in other folders)
